--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,9 +44,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Ewha Womans University Blockchain Society</div>
+                <div class="intro-heading">EWHA-CHAIN</div>
+                <a href="#services" class="page-scroll btn btn-xl">Detail</a>
             </div>
         </div>
     </header>
